--- a/src/main/resources/org/ai/tictactoe/Game.fxml
+++ b/src/main/resources/org/ai/tictactoe/Game.fxml
@@ -1,46 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="780.0" prefWidth="1140.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.ai.tictactoe.GameController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="780.0" prefWidth="1140.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.ai.tictactoe.controllers.GameController">
     <children>
         <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#22242a" height="680.0" stroke="BLACK" strokeType="INSIDE" width="1100.0" />
         <VBox prefHeight="430.0" prefWidth="1140.0">
          <children>
-            <HBox prefHeight="170.0" prefWidth="1140.0">
+            <AnchorPane fx:id="GamePane" prefHeight="696.0" prefWidth="1140.0">
                <children>
-                  <AnchorPane prefHeight="170.0" prefWidth="580.0">
-                     <children>
-                        <ImageView fitHeight="80.0" fitWidth="80.0" layoutX="62.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/Player%201.png" />
-                           </image>
-                        </ImageView>
-                     </children>
-                  </AnchorPane>
-                  <AnchorPane prefHeight="170.0" prefWidth="580.0">
-                     <children>
-                        <ImageView fitHeight="80.0" fitWidth="80.0" layoutX="427.0" layoutY="88.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/Player%201.png" />
-                           </image>
-                        </ImageView>
-                     </children>
-                  </AnchorPane>
-               </children>
-            </HBox>
-            <AnchorPane fx:id="GamePane" prefHeight="562.0" prefWidth="948.0">
-               <children>
-                  <GridPane fx:id="boardGrid" hgap="10.0" layoutX="271.0" layoutY="-14.0" onMouseClicked="#playerClicked" prefHeight="550.0" prefWidth="550.0" vgap="10.0">
+                  <GridPane fx:id="boardGrid" hgap="10.0" layoutX="292.0" layoutY="93.0" onMouseClicked="#playerClicked" prefHeight="550.0" prefWidth="550.0" vgap="10.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -60,7 +38,21 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                   </GridPane>
+                  <Text fx:id="statusScreen" fill="WHITE" layoutX="441.0" layoutY="656.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="231.2664794921875">
+                     <font>
+                        <Font name="System Bold" size="32.0" />
+                     </font>
+                  </Text>
                </children></AnchorPane>
+            <StackPane fx:id="btnPane" prefHeight="113.0" prefWidth="1140.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#handleAIVsAI" prefHeight="38.0" prefWidth="191.0" styleClass="btn5" text="Start" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="32.0" />
+                     </font>
+                  </Button>
+               </children>
+            </StackPane>
          </children>
         </VBox>
     </children>
