--- a/src/main/resources/org/ai/tictactoe/hello-view.fxml
+++ b/src/main/resources/org/ai/tictactoe/hello-view.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="780.0" prefWidth="1140.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.ai.tictactoe.HelloController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="780.0" prefWidth="1140.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.ai.tictactoe.controllers.HelloController">
     <children>
         <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#22242a" height="680.0" stroke="BLACK" strokeType="INSIDE" width="1100.0" />
         <VBox prefHeight="430.0" prefWidth="1140.0">
@@ -92,7 +92,7 @@
                                 <Font name="System Bold" size="38.0" />
                             </font>
                         </Text>
-                        <Text fill="WHITE" layoutX="737.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="or">
+                        <Text fill="WHITE" layoutX="751.0" layoutY="312.0" strokeType="OUTSIDE" strokeWidth="0.0" text="|">
                             <font>
                                 <Font name="System Bold" size="38.0" />
                             </font>
@@ -148,6 +148,17 @@
                         <DropShadow height="4.0" offsetY="4.0" radius="0.5" spread="1.0" width="0.0" />
                      </effect>
                   </Text>
+                  <Button layoutX="654.0" layoutY="372.0" mnemonicParsing="false" onAction="#chooseComputerVsComputerGame" prefHeight="65.0" prefWidth="205.0" styleClass="btn0" text="AI vs AI" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="32.0" />
+                     </font>
+                     <effect>
+                        <DropShadow height="4.0" offsetY="10.0" radius="0.5" width="0.0" />
+                     </effect>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
                     </children>
                 </AnchorPane>
             </children>
